修改：     .github/workflows/sphinx.yml

--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -41,7 +41,7 @@ jobs:
       - name: 👷‍ Install dependencies
         shell: bash
         run: |
-          pip install -r docs/requirements-test.txt
+          pip install -r requirements-test.txt
 
       - name: 🔧 Build HTML
         run: |
