--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -38,22 +38,16 @@ jobs:
       #     sudo apt update
       #     sudo apt install -y graphviz
 
-      - name: 👷‍ Install dependencies
-        shell: bash
-        run: |
-          pip install -r requirements-test.txt
-
       - name: 🔧 Build HTML
         run: |
-          cd docs
-          make html
-
-      # remove the .doctrees folder when building for deployment as it takes two thirds of disk space
-      - name: 🔥 Clean up files
-        run: rm -r docs/_build/doctrees/
+          nox -s docs --non-interactive
 
       - name: 🚀 Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3.6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html
+          publish_dir: docs/.nox/docs/tmp/output/html
+
+      # remove the .doctrees folder when building for deployment as it takes two thirds of disk space
+      - name: 🔥 Clean up files
+        run: rm -r docs/.nox
